[tool.poetry]
name = "streamlit-gapminder"
version = "0.1.0"
description = "Demo of different interactive visualization libraries in Python."
authors = ["Daniel Kapitan <daniel@kapitan.net>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
altair = "^4.1.0"
bokeh = "2.0.0"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
numpy = "^1.21.2"
plotly = "^5.3.1"
streamlit = "^0.89.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
